--- a/conf/_templates/globaltoc.html
+++ b/conf/_templates/globaltoc.html
@@ -6,7 +6,7 @@
 <p>更新日 {{ today }}</p>
 -->
 
-<h3><a href="{{ pathto(master_doc) }}">{{ _('Contents') }}</a></h3>
+<h3><a href="{{ pathto(master_doc) }}">{{ _('Table of Contents') }}</a></h3>
 {%- if sphinx_version[:3] >= '1.2' %}
 {{ toctree(maxdepth=2, collapse=False, includehidden=True) }}
 {% else %}
