modify url for languages

--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -10,9 +10,9 @@
 </ul>
 -->
 {%- if theme_lang == 'ja' %}
-<a class="csupport" href="../../../en/_build/html/index.html">English</a>
+<a class="csupport" href="/index.html">English</a>
 {% else %}
-<a class="csupport" href="../../../ja/_build/html/index.html">Japanese</a>
+<a class="csupport" href="/ja/index.html">Japanese</a>
 {% endif %}
 </p>
 {% endblock %}
