--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -1,14 +1,18 @@
 {% extends "!layout.html" %}
+{% block extrahead %}
+{{ super() }}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-34667351-2', 'auto');
+  ga('send', 'pageview');
+</script>
+{% endblock %}
 {% block header %}
 {{ super() }}
 <p class="navbar-text pull-right">
-<!--
-<ul class="snsbtns" style="list-style:none;">
-<li><dir class="twitter">
-<a href="https://twitter.com/share" class="icon fa fa-twitter fa-2x" data-count="none" data-url="http://fess.codelibs.org" data-text="Fess - CodeLibs -" data-lang="en"></a>
-</dir></li>
-</ul>
--->
 {%- if theme_lang == 'ja' %}
 <a class="csupport" href="/index.html">English</a>
 {% else %}
@@ -21,14 +25,4 @@
 {% endblock %}
 {% block footer %}
 {{ super() }}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-34667351-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 {% endblock %}
