--- a/conf/_templates/globaltoc.html
+++ b/conf/_templates/globaltoc.html
@@ -2,7 +2,7 @@
 {%- if theme_lang == 'ja' %}
 <p><a class="externalLink" href="https://jp.stanby.com/ats/n2sm/jobs/0000019" target="_blank">[PR] Fessを一緒に作りませんか？</a></p>
 {% else %}
-<p><a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Need commercial support?</a></p>
+<p><a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Need Commercial Support?</a></p>
 {% endif %}
 
 <h3><a href="{{ pathto(master_doc) }}">{{ _('Table Of Contents') }}</a></h3>
