--- a/conf/_templates/globaltoc.html
+++ b/conf/_templates/globaltoc.html
@@ -1,6 +1,6 @@
 <div id="toc" class="sidebarRow">
 {%- if theme_lang == 'ja' %}
-<p><a class="externalLink" href="https://jp.stanby.com/ats/n2sm/jobs/0000019" target="_blank">[PR] Fessを一緒に作りませんか？</a></p>
+<p><a class="externalLink" href="http://www.n2sm.net/services/n2search-asp-campaign.html" target="_blank">[PR] 今なら商用Fessが初期費用無料！</a></p>
 {% else %}
 <p><a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Need Commercial Support?</a></p>
 {% endif %}
