--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -113,9 +113,9 @@
 {%- if theme_lang == 'ja' %}
 <p><a class="externalLink" href="http://www.n2sm.net/products/n2search.html"><img src="/ja/_images/n2search_b.png" alt="N2 Search"></a></p>
 <!-- <p><a class="externalLink" href="https://jp.stanby.com/ats/n2sm/jobs/0000019" target="_blank">[PR] Fessの開発者募集(正社員)</a></p> -->
-<p><a class="externalLink" href="https://github.com/codelibs/fess-docs" target="_blank">このドキュメントの編集</a></p>
+<p>&raquo; <a class="externalLink" href="https://github.com/codelibs/fess-docs" target="_blank">このドキュメントの編集</a></p>
 {% else %}
-<p><a class="externalLink" href="https://github.com/codelibs/fess-docs" target="_blank">Edit This Document</a></p>
+<p>&raquo; <a class="externalLink" href="https://github.com/codelibs/fess-docs" target="_blank">Edit This Document</a></p>
 {% endif %}
 
   </div>
