--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -105,9 +105,9 @@
           <p class="pr">
             {%- if language == 'ja' %}
               <!-- <a class="externalLink" href="http://www.n2sm.net/services/n2search-asp-campaign.html" target="_blank">[PR] 今なら商用Fessが初期費用無料！</a> -->
-              <a class="externalLink" href="http://www.n2sm.net/recruit/product.html" target="_blank">[PR] Fessを一緒に開発しませんか</a>
+              <a class="externalLink" href="http://www.n2sm.net/recruit/product.html" target="_blank">Fessの開発者募集</a>
             {% else %}
-              <a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Need Commercial Support?</a>
+              <a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Commercial Support</a>
             {% endif %}
           </p>
 
