--- a/conf/_templates/versions.html
+++ b/conf/_templates/versions.html
@@ -1,5 +1,10 @@
   <div class="rst-versions">
     <span class="rst-current-version">
+      {%- if language == 'ja' %}
+      <span style="float:left;">
+         <a class="fa fa-info-circle" href="http://www.n2sm.net/recruit/product.html" target="_blank">開発者募集</a>
+      </span>
+      {% endif %}
       <span>
         {% if pagename != "search" %}
             {% if display_github %}
