--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -32,9 +32,9 @@
     {% block breadcrumbs_aside %}
       <li class="wy-breadcrumbs-aside">
 {% if language == 'ja' %}
-<a class="externalLink" href="http://www.n2sm.net/n2search/" target="_blank">商用サポート</a>
+<a class="externalLink fa fa-building" href="http://www.n2sm.net/n2search/" target="_blank">商用サポート</a>
 {% else %}
-<a class="externalLink" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Commercial Support</a>
+<a class="externalLink fa fa-building" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Commercial Support</a>
 {% endif %}
       </li>
     {% endblock %}
