--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -39,5 +39,8 @@
       </li>
     {% endblock %}
   </ul>
+{% if language == 'ja' %}
+<ul class="wy-breadcrumbs"><li><a href="http://www.java-users.jp/ccc2016fall/" target="_blank" style="color:#fe4918;">12/3(土) JJUG CCC 2016 FALL 18:30-19:20 「Fess構築入門」</a></li></ul>
+{% endif %}
   <hr/>
 </div>
