--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -40,7 +40,7 @@
     {% endblock %}
   </ul>
 {% if language == 'ja' %}
-<ul class="wy-breadcrumbs"><li><a href="http://www.java-users.jp/ccc2016fall/" target="_blank" style="color:#fe4918;">12/3(土) JJUG CCC 2016 FALL 18:30-19:20 「Fess構築入門」</a></li></ul>
+<ul class="wy-breadcrumbs"><li><a href="http://www.java-users.jp/ccc2016fall/" target="_blank" style="color:#fe4918;text-decoration:underline;">12/3(土) 18:30-19:20 JJUG CCC 2016 FALL「Fess構築入門」の講演予定</a></li></ul>
 {% endif %}
   <hr/>
 </div>
