--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -207,6 +207,7 @@
   <script type="text/javascript">
       jQuery(function () {
           SphinxRtdTheme.StickyNav.enable();
+          $("a.external").attr('target','_blank');
       });
   </script>
   {% endif %}
