--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -32,7 +32,7 @@
     {% block breadcrumbs_aside %}
       <li class="wy-breadcrumbs-aside">
 {% if language == 'ja' %}
-<a class="externalLink fa fa-building" href="http://www.n2sm.net/services/n2search-asp-lite.html" target="_blank">月額1000円でGoogle Site Searchから移行</a>
+<a class="externalLink fa fa-building" href="http://www.n2sm.net/services/n2search-asp-lite.html" target="_blank">月額1000円でサイト内検索</a>
 {% else %}
 <a class="externalLink fa fa-building" href="http://www.n2sm.net/en/support/fess_support.html" target="_blank">Commercial Support</a>
 {% endif %}
