--- a/conf/_templates/versions.html
+++ b/conf/_templates/versions.html
@@ -2,7 +2,7 @@
     <span class="rst-current-version">
       {%- if language == 'ja' %}
       <span style="float:left;">
-         <a class="fa fa-info-circle" href="http://www.n2sm.net/recruit/product.html" target="_blank">開発者募集</a>
+         <a class="fa fa-info-circle" href="http://www.n2sm.net/recruit/product.html" target="_blank">一緒に作りませんか?</a>
       </span>
       {% endif %}
       <span>
