--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -27,7 +27,7 @@
   {{ metatags }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block htmltitle %}
-  <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
+  <title>{{ title|striptags|e }}</title>
   {% endblock %}
 
   {# FAVICON #}
