--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -32,9 +32,9 @@
     {% block breadcrumbs_aside %}
       <li class="wy-breadcrumbs-aside">
 {% if language == 'ja' %}
-<a class="externalLink fa fa-building" href="https://www.n2sm.net/products/n2search.html" target="_blank">商用サポートはこちら</a>
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://fess.codelibs.org/ja/" data-lang="ja" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 {% else %}
-<a class="externalLink fa fa-building" href="https://www.n2sm.net/en/support/fess_support.html" target="_blank">Commercial Support</a>
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://fess.codelibs.org/" data-lang="en" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 {% endif %}
       </li>
     {% endblock %}
