--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -99,6 +99,9 @@
     {%- endif %}
   {%- endblock %}
   {%- block extrahead %} {% endblock %}
+{%- if language != 'ja' %}
+<script data-ad-client="ca-pub-0248074489415800" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+{% endif %}
 </head>
 
 <body class="wy-body-for-nav" role="document">
