--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -32,10 +32,7 @@
     {% block breadcrumbs_aside %}
       <li class="wy-breadcrumbs-aside">
 {% if language == 'ja' %}
-<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ffess.codelibs.org%2F&layout=button&size=small&mobile_iframe=true&width=61&height=20&appId" width="61" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-<a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<div class="line-it-button" data-lang="ja" data-type="share-a" data-url="https://fess.codelibs.org/ja/" style="display: none;"></div><script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
-<a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/v4/bookmark_button.js" charset="utf-8" async="async"></script>
+<a class="externalLink fa fa-building" href="https://www.n2sm.net/products/n2search.html" target="_blank">商用でのご利用はこちら</a>
 {% else %}
 <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ffess.codelibs.org%2F&layout=button&size=small&mobile_iframe=true&width=63&height=20&appId" width="63" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
