remove fa-building

--- a/conf/_templates/breadcrumbs.html
+++ b/conf/_templates/breadcrumbs.html
@@ -32,7 +32,7 @@
     {% block breadcrumbs_aside %}
       <li class="wy-breadcrumbs-aside">
 {% if language == 'ja' %}
-<a class="externalLink fa fa-building" href="https://www.n2sm.net/products/n2search.html" target="_blank">商用でのご利用はこちら</a>
+<a class="externalLink" href="https://www.n2sm.net/products/n2search.html" target="_blank">商用でのご利用はこちら</a>
 {% else %}
 <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ffess.codelibs.org%2F&layout=button&size=small&mobile_iframe=true&width=63&height=20&appId" width="63" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 <a href="https://twitter.com/share" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
