--- a/conf/_templates/versions.html
+++ b/conf/_templates/versions.html
@@ -2,9 +2,9 @@
     <span class="rst-current-version">
       <span style="float:left;">
         {%- if language == 'ja' %}
-        <a class="fa fa-building" href="https://www.n2sm.net/products/n2search.html" target="_blank">商用サポート</a>
+        <a href="https://www.n2sm.net/products/n2search.html" target="_blank">商用サポート</a>
         {% else %}
-        <a class="fa fa-building" href="https://www.n2sm.net/en/support/fess_support.html" target="_blank">Support</a>
+        <a href="https://www.n2sm.net/en/support/fess_support.html" target="_blank">Support</a>
         {% endif %}
       </span>
       <span>
