--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -43,6 +43,13 @@
   <meta property="og:image" content="">
   <meta name="twitter:site" content="">
   <meta name="twitter:card" content="summary">
+  <meta name="twitter:creator" content="@codelibs">
+
+  <link rel="preload" href="{{ pathto('_static/fonts/fontawesome-webfont.woff2?v=4.7.0', 1) }}" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ pathto('_static/fonts/Lato/lato-regular.woff2', 1) }}" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ pathto('_static/fonts/Lato/lato-bold.woff2', 1) }}" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ pathto('_static/fonts/RobotoSlab/roboto-slab-v7-regular.woff2', 1) }}" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="{{ pathto('_static/fonts/RobotoSlab/roboto-slab-v7-bold.woff2', 1) }}" as="font" type="font/woff2" crossorigin>
 
   {# FAVICON #}
   {% if favicon %}
