replace with gtag

--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -15,15 +15,8 @@
 <!--[if IE 8]><html class="no-js lt-ie9" lang="{{ htmllang }}" > <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="{{ htmllang }}" > <!--<![endif]-->
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34667351-2"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-34667351-2');
-  </script>
   <meta charset="utf-8">
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5F964KP');</script>
   {{ metatags }}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block htmltitle %}
@@ -111,7 +104,7 @@
 </head>
 
 <body class="wy-body-for-nav" role="document">
-
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5F964KP" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   {% block extrabody %} {% endblock %}
   <div class="wy-grid-for-nav">
 
