--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -162,6 +162,14 @@
             {% endif %}
           {% endblock %}
         </div>
+
+        {%- if language != 'ja' %}
+        <div class="wy-menu wy-menu-vertical pad5">
+          <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-0248074489415800" data-ad-slot="7368556045" data-ad-format="auto" data-full-width-responsive="true"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </div>
+        {% endif %}
       </div>
     </nav>
 
