--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -165,7 +165,6 @@
 
         {%- if language != 'ja' %}
         <div class="wy-menu wy-menu-vertical pad5">
-          <script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-0248074489415800" data-ad-slot="7368556045" data-ad-format="auto" data-full-width-responsive="true"></ins>
           <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
         </div>
@@ -236,5 +235,25 @@
 
   {%- block footer %} {% endblock %}
 
+  {%- if language != 'ja' %}
+<script>
+//<![CDATA[
+var lazyloadads = false;
+window.addEventListener("scroll", function() {
+    if ((document.documentElement.scrollTop != 0 && lazyloadads === false) || (document.body.scrollTop != 0 && lazyloadads === false)) {
+        (function() {
+            var ad = document.createElement('script');
+            ad.type = 'text/javascript';
+            ad.async = true;
+            ad.src = 'https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js';
+            var sc = document.getElementsByTagName('script')[0];
+            sc.parentNode.insertBefore(ad, sc);
+        })();
+        lazyloadads = true;
+    }
+}, true)
+//]]>
+</script>
+  {% endif %}
 </body>
 </html>
