--- a/conf/_templates/layout.html
+++ b/conf/_templates/layout.html
@@ -118,17 +118,7 @@
         <div class="wy-side-nav-search">
           {% block sidebartitle %}
 
-          {% if logo and theme_logo_only %}
-            <a href="{{ pathto(master_doc) }}">
-          {% else %}
-            <a href="{{ pathto(master_doc) }}" class="icon icon-home"> {{ project }}
-          {% endif %}
-
-          {% if logo %}
-            {# Not strictly valid HTML, but it's the only way to display/scale it properly, without weird scripting or heaps of work #}
-            <img src="{{ pathto('_static/' + logo, 1) }}" class="logo" />
-          {% endif %}
-          </a>
+          <a href="{{ pathto(master_doc) }}"><img src="{{ pathto('_static/img/fess-logo.png', 1) }}" alt=" {{ project }}"></a>
 
           <p class="pr">
             {%- if language == 'ja' %}
